# lmc

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: lmc.cpp.346422CD093AED51.idx  lmc.h.5C8566D0871FB187.idx  main.cpp.E18FAF1109299C84.idx
examples/: add_two_numbers.lmc  add_two_numbers.txt  countdown.lmc  fibonacci.lmc
include/: lmc.h
src/: lmc.cpp  main.cpp
